<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">


    <SeekBar
        android:id="@+id/volumeSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />


      <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableRow3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/volumeSeekBar"
        android:layout_marginTop="3dp" />

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableRow2"
        android:layout_gravity="center_horizontal"
        android:layout_margin="1dp">


        <Button
            android:id="@+id/shuffleButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/shuffle_off_text"
            android:textColor="@android:color/transparent"
            android:background="@drawable/shuffle_off" />

        <TextView
            android:id="@+id/playingSongDetailTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"/>

        <Button
            android:id="@+id/repeatButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/repeat_off_text"
            android:textColor="@android:color/transparent"
            android:background="@drawable/repeat_off"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableRow1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="1dp">

        <TextView
            android:id="@+id/elapsedTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:text="@string/default_time_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/songProgressSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/totalTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:text="@string/default_time_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/rewindButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/rewind_text"
            android:textColor="@android:color/transparent"
            android:background="@drawable/rewind"/>

        <Button
            android:id="@+id/playPauseButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/play_text"
            android:textColor="@android:color/transparent"
            android:background="@drawable/play"/>

        <Button
            android:id="@+id/forwardButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/forward_text"
            android:textColor="@android:color/transparent"
            android:background="@drawable/forward"/>
    </TableRow>


</RelativeLayout>
